# 3d-JS-renderer

./: .gitignore  2D-Renderer.js  Game.js  GenerateAtlas.py  Math.js  Perlin2D.js  Perlin3D.js  Player.js  Primitives.js  README.md  Renderer.js  Scene.js  Vectors.js  chunkWorker.js  constants.js  index.html  main.js  package-lock.json  package.json  style.css  tsconfig.json  vite.config.js
Chunks/: Chunk.js  ChunkManager.js  RLE.js
Globals/: ActiveRenderer.js  Blocks.js  Canvas.js  Constants.js  Shaders.js  Window.js
Globals/Biomes/: Initializer.js
Globals/Blocks/: Blocks.js  Initializer.js
Player/: Player.js
RendererThreeD/: Clouds.js  Debug.js  FrameBuffer.js  Matrices.js  Particle.js  ParticleManager.js  ParticleTextureManager.js  Renderer.js  SetUniforms.js  ShaderProgram.js  Text.js  TextureManager.js  TickCounter.js
RendererThreeD/Particles/: Particle.js  ParticleManager.js
World/: Chunk.js  ChunkManager.js  RLE.js  World.js
assets/: WorkerHandler-DZ2_1wTq.js  index-Andm4B97.css  index-BE5fIZOD.js  index-C-5wucQ2.js  index-CFOe5mpt.js  index-Cq1hkdm6.js  index-D--Jcrri.js  index-D1kNnb1I.js  index-H78rUi4B.js  index-N3IxXzLz.css  index-qMzf1rJm.js
public/: biomes.json
rust/renderer-wasm/: Cargo.toml
rust/renderer-wasm/src/: lib.rs  lighting.rs  mesh.rs
shaders/: clouds.frag  clouds.vert  colored.vert  debug.vert  fluids.vert  frameBuffer.frag  fs.frag  particle.frag  particle.vert  vs.vert
src/: Scene.js  main.ts
static/: blocks.json  style.css
worker/: LightBuilder.js  MeshBuilder.js  TerrainBuilder.js  WorkerHandler.js
(+46 files in other folders)
