[package]
name = "renderer-wasm"
version = "0.1.0"
authors = ["Liam Gardner <liam@zelv.co.uk>"]
description = "WASM to be used by the 3d Renderer"
license = "MIT/Apache-2.0"
repository = "https://github.com/liamg2810/3d-JS-renderer"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"